| Bug #42414 | falcon_bug_33211 fails when trying to create a table in a non-existing table spa | ||
|---|---|---|---|
| Submitted: | 28 Jan 2009 11:25 | Modified: | 15 May 2009 13:05 |
| Reporter: | Olav Sandstå | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Falcon storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.0.10-alpha | OS: | Solaris (Solaris 10 on x86) |
| Assigned to: | Vladislav Vaintroub | CPU Architecture: | Any |
| Tags: | F_TABLESPACE | ||
[28 Jan 2009 11:25]
Olav Sandstå
[28 Jan 2009 14:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64298 2982 Vladislav Vaintroub 2009-01-28 Bug #42414 falcon_bug_33211 fails when trying to create a table in a non-existing table space. This is a regression introduced with the fix for #42392 !Falcon bugs in recovery of create tablespace". The root cause is that tablespace bootstrap does not try open all tablespaces anymore. The code in Falcon was not prepared to handle inactive tablespace in this specific case (create table in a tablespace) Fix: open tablespace if it is inactive, regardless if it is an open open by id or by name.
[13 Feb 2009 7:24]
Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090211182317-uagkyj01fk30p1f8) (version source revid:vvaintroub@mysql.com-20090128142637-6stffvveoj6s38zx) (merge vers: 6.0.10-alpha) (pib:6)
[15 May 2009 13:05]
MC Brown
An entry has been added to the 6.0.10 changelog: Falcon would fail to create a table in a TABLESPACE that had not already been opened by a previous operation.
